--- a/data/Untitled.ipynb
+++ b/data/Untitled.ipynb
@@ -13,6 +13,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "df_nasdaq = pandas_datareader.nasdaq_trader.get_nasdaq_symbols()\n",
+    "df_nasdaq['Security Name'] = df_nasdaq['Security Name'].astype(str)\n",
+    "\n",
+    "df_nasdaq = df_nasdaq[:10]\n",
+    "df_nasdaq.to_csv(\"./nasdaq_allstocks_2020.csv\", index=False, quoting=csv.QUOTE_ALL)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [
@@ -279,8 +294,8 @@
     "import csv\n",
     "\n",
     "df_nasdaq = pandas_datareader.nasdaq_trader.get_nasdaq_symbols()\n",
-    "df_nasdaq['Security Name'] = df_nasdaq['Security Name'].astype(str).str.replace('\"', '')\n",
-    "df_nasdaq.to_csv(\"./nasdaq_allstocks_2020.csv\", index=False, quoting=csv.QUOTE_ALL)# , escapechar='')\n",
+    "df_nasdaq['Security Name'] = df_nasdaq['Security Name'].astype(str)\n",
+    "df_nasdaq.to_csv(\"./nasdaq_allstocks_2020.csv\", index=False, quoting=csv.QUOTE_ALL)\n",
     "df_nasdaq"
    ]
   },
