--- a/notebook/evaluate_mmvp_srmp.ipynb
+++ b/notebook/evaluate_mmvp_srmp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "\n",
     "from datetime import datetime\n",
     "from pprint import pprint\n",
-    "from models import MarkowitzMinVarianceModel\n",
+    "from models import MarkowitzMinVarianceModel, SharpeRatioMaxModel\n",
     "\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
        " '9989.T']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,48 +551,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nst = '2010/10/31' \\ned = '2020/10/31' \\n\\nst = datetime(2010, 10, 31)\\ned = datetime(2020, 10, 31)\\n\\ndfs = []\\nfor symbol in symbols_tpx500:\\n    try:\\n        df = pandas_datareader.data.DataReader(symbol, 'yahoo', st, ed) # daily\\n        df = df.sort_values(by='Date', ascending=True)\\n        df = df.resample('M').mean() # daily -> monthly\\n        df = df.fillna(method='ffill') # 1つ前の行の値で埋める\\n        df = df[['Close']].rename(columns={'Close': symbol})\\n        dfs.append(df)\\n    except:\\n        pass\\n    \\ndf = pd.concat(dfs, axis=1)\\ndf.head()\\n\""
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "st = '2010/10/31' \n",
-    "ed = '2020/10/31' \n",
-    "\n",
-    "st = datetime(2010, 10, 31)\n",
-    "ed = datetime(2020, 10, 31)\n",
+    "st = '2000/10/31' \n",
+    "ed = '2020/10/31'\n",
     "\n",
     "dfs = []\n",
     "for symbol in symbols_tpx500:\n",
     "    try:\n",
     "        df = pandas_datareader.data.DataReader(symbol, 'yahoo', st, ed) # daily\n",
-    "        df = df.sort_values(by='Date', ascending=True)\n",
     "        df = df.resample('M').mean() # daily -> monthly\n",
+    "        df = df.sort_values(by='Date', ascending=True)\n",
     "        df = df.fillna(method='ffill') # 1つ前の行の値で埋める\n",
     "        df = df[['Close']].rename(columns={'Close': symbol})\n",
     "        dfs.append(df)\n",
     "    except:\n",
     "        pass\n",
-    "    \n",
+    "\n",
     "df = pd.concat(dfs, axis=1)\n",
-    "df.head()\n",
-    "\"\"\""
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in df.columns:\n",
+    "    st_idx = df[col].first_valid_index()\n",
+    "    ed_idx = df[col].last_valid_index()\n",
+    "    \n",
+    "    # for any columns (=stocks)\n",
+    "    if df[col].isnull().any():\n",
+    "        # 新規上場\n",
+    "        if st_idx != df.index[0]:\n",
+    "            df[col] = df[col].fillna(df[col][st_idx])\n",
+    "\n",
+    "        # 上場廃止\n",
+    "        if df.index[-1] != ed_idx:\n",
+    "            df[col] = df[col].fillna(df[col][ed_idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if df includes nan elements\n",
+    "df.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +1029,7 @@
        "[109 rows x 471 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1436,7 @@
        "[109 rows x 471 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1440,27 +1504,6 @@
     "# plt.legend(loc='center left', bbox_to_anchor=(1.0, 0.5))\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
