--- a/notebook/sample_TopixCore30_MarkowitzMeanVarianceModel.ipynb
+++ b/notebook/sample_TopixCore30_MarkowitzMeanVarianceModel.ipynb
@@ -1497,7 +1497,7 @@
    "source": [
     "plt.figure(figsize=(12, 6))\n",
     "for idx, col in enumerate(df.columns):\n",
-    "    plt.plot(df_retchg.index, df_retchg[col], label=col, alpha=0.5)\n",
+    "    plt.plot(df_retchg.index, df_retchg[col], label=col.replace(\".T\", \"\"), alpha=0.5)\n",
     "plt.legend(loc='center left', bbox_to_anchor=(1.0, 0.5))\n",
     "plt.show()"
    ]
@@ -1523,7 +1523,7 @@
    "source": [
     "plt.figure(figsize=(12, 6))\n",
     "for idx, col in enumerate(df.columns):\n",
-    "    plt.plot(df_retcum.index, df_retcum[col], label=col, alpha=0.5)\n",
+    "    plt.plot(df_retcum.index, df_retcum[col], label=col.replace(\".T\", \"\"), alpha=0.5)\n",
     "plt.legend(loc='center left', bbox_to_anchor=(1.0, 0.5))\n",
     "plt.show()"
    ]
